--- a/workkk/index.html
+++ b/workkk/index.html
@@ -3,6 +3,16 @@
 
 <head>
     <style>
+        footer {
+            border: 1px solid black;
+            margin-top: 100px;
+            margin-bottom: 100px;
+            margin-right: 150px;
+            margin-left: 80px;
+            background-color: lightblue;
+        }
+        </style>
+    <style>
         body {
           background-image: url('fondo.webp');
           background-repeat: no-repeat;
@@ -11,21 +21,21 @@
         
         }
         </style>
-<title> Galeria de arte ARTnet </title>
+<title> ARTnet </title>
 </head>
 <body>
 <header> 
     <center> <h1 style="font-size:70px; color: blueviolet;">ARTnet</h1> </center>
-    <center><p style="font-size: 30px;"> ARTnet es una empresa dedicada a la exploracion visual, al encantamiento del espectador mediante el arte antiguo y moderno. Nuestra galeria de arte web esta orientada a esas personas amantes del arte que no pueden quizas salir de sus casas para ir a un museo, llevamos las maravillas del mundo artistico a la comodidad de un explorador.
+    <center><p style="font-size: 30px;"> ARTnet es una empresa dedicada a la exploración visual, al encantamiento del espectador mediante el arte antiguo y moderno. Nuestra galería de arte web esta orientada a esas personas amantes del arte que no pueden quizás salir de sus casas para ir a un museo, llevamos las maravillas del mundo artístico a la comodidad de un explorador.
 
     </p> </center>
 
 </header>
 
-<center>
-    <a style="font-size: 30px;" href="index2.html">Galeria de arte</a> <br>
+<center><footer>
+    <a style="font-size: 30px;" href="index2.html">Galería de arte</a> <br>
     <a style="font-size: 30px;" href="index3.html">Contactos</a>
-</center>
+</center></footer>
 </body>
 
 </html>
