--- a/workkk/index2.html
+++ b/workkk/index2.html
@@ -2,6 +2,16 @@
 <html> 
 
 <head>
+  <style>
+    footer {
+        border: 1px solid black;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-right: 150px;
+        margin-left: 80px;
+        background-color: lightblue;
+    }
+    </style>
     <style>
         body {
           background-image: url('fondo.webp');
@@ -14,13 +24,13 @@
     <style>
         div.gallery {
           margin: 5px;
-          border: 1px solid #ccc;
+          border: 1px solid #fffcfc;
           float: center;
           width: 180px;
         }
         
         div.gallery:hover {
-          border: 1px solid #777;
+          border: 1px solid #e6e2e2;
         }
         
         div.gallery img {
@@ -33,17 +43,17 @@
           text-align: center;
         }
         </style>
-<title> Galeria de arte</title>
+<title> ARTnet</title>
 
 </head>
 <body>
-<center><h1>Galeria principal</h1></center>
+<center><h1>Galería principal</h1></center>
 
     <center><div class="gallery">
     <a target="_blank" href="monalisa.jpg">
       <img src="monalisa.jpg" alt="mona lisa" width="600" height="400">
     </a>
-    <div class="desc">La Gioconda/Monna Lisa. <br>Por Leonardo Da Vinci en el año 1503</div>
+    <div class="desc">La Gioconda/Monna Lisa. <br>Por Leonardo Da Vinci en el año 1503.</div>
   </div>
   
   <div class="gallery">
@@ -66,10 +76,10 @@
     </a>
     <div class="desc">Retrato de Dora Maar. <br> Por Pablo Picasso en el año 1937.</div>
   </div></center>
-  <footer><br>
+  <footer>
 
-    <a href="index.html">Pagina principal</a> <br>
-    <a href="index3.html">Contactos</a>
+    <a style="font-size: 30px;" href="index.html">Pagina principal</a> <br>
+    <a style="font-size: 30px;" href="index3.html">Contactos</a>
     </footer>
 
 </body>
